gramatica_latino.output
Terminals unused in grammar

   COMA


Grammar

    0 $accept: codigo $end

    1 codigo: sentencias

    2 sentencias: sentencia
    3           | sentencias sentencia

    4 sentencia: asignacion
    5          | imprimir
    6          | bucle_w
    7          | bucle_f
    8          | condicion_if

    9 asignacion: IDENTIFICADOR IGUAL expresion

   10 expresion: expresion SUMA tipos
   11          | expresion RESTA tipos
   12          | expresion MULTIPLICACION tipos
   13          | expresion DIVISION tipos
   14          | expresion MAYOR_QUE tipos
   15          | expresion MAYOR_IGUAL_QUE tipos
   16          | expresion MENOR_QUE tipos
   17          | expresion MENOR_IGUAL_QUE tipos
   18          | expresion IGUAL_IGUAL tipos
   19          | expresion NO_IGUAL tipos
   20          | expresion AND tipos
   21          | expresion OR tipos
   22          | tipos

   23 tipos: IDENTIFICADOR
   24      | NUMERICO
   25      | NUMERICODECIMAL
   26      | CADENA

   27 imprimir: IMPRIMIR APERTURAPARENTESIS expresion CIERREPARENTESIS

   28 bucle_w: WHILE APERTURAPARENTESIS expresion CIERREPARENTESIS DOSPUNTOS sentencias FIN_BUCLE

   29 bucle_f: FOR_BUCLE IDENTIFICADOR IN RANGE APERTURAPARENTESIS expresion CIERREPARENTESIS DOSPUNTOS sentencias FIN_FOR

   30 condicion_if: IF_CONDICION APERTURAPARENTESIS expresion CIERREPARENTESIS DOSPUNTOS sentencias elif_clauses else_clause FIN_CONDICION

   31 elif_clauses: /* empty */
   32             | elif_clauses ELIF_CONDICION APERTURAPARENTESIS expresion CIERREPARENTESIS DOSPUNTOS sentencias

   33 else_clause: ELSE_CONDICION DOSPUNTOS sentencias
   34            | /* empty */


Terminals, with rules where they appear

$end (0) 0
error (256)
SUMA (258) 10
RESTA (259) 11
MULTIPLICACION (260) 12
DIVISION (261) 13
IGUAL (262) 9
APERTURAPARENTESIS (263) 27 28 29 30 32
CIERREPARENTESIS (264) 27 28 29 30 32
IMPRIMIR (265) 27
MAYOR_QUE (266) 14
MENOR_QUE (267) 16
MAYOR_IGUAL_QUE (268) 15
MENOR_IGUAL_QUE (269) 17
IGUAL_IGUAL (270) 18
NO_IGUAL (271) 19
AND (272) 20
OR (273) 21
WHILE (274) 28
FIN_BUCLE (275) 28
DOSPUNTOS (276) 28 29 30 32 33
FOR_BUCLE (277) 29
FIN_FOR (278) 29
IN (279) 29
RANGE (280) 29
COMA (281)
IF_CONDICION (282) 30
ELIF_CONDICION (283) 32
ELSE_CONDICION (284) 33
FIN_CONDICION (285) 30
NUMERICO (286) 24
NUMERICODECIMAL (287) 25
IDENTIFICADOR (288) 9 23 29
CADENA (289) 26


Nonterminals, with rules where they appear

$accept (35)
    on left: 0
codigo (36)
    on left: 1, on right: 0
sentencias (37)
    on left: 2 3, on right: 1 3 28 29 30 32 33
sentencia (38)
    on left: 4 5 6 7 8, on right: 2 3
asignacion (39)
    on left: 9, on right: 4
expresion (40)
    on left: 10 11 12 13 14 15 16 17 18 19 20 21 22, on right: 9 10
    11 12 13 14 15 16 17 18 19 20 21 27 28 29 30 32
tipos (41)
    on left: 23 24 25 26, on right: 10 11 12 13 14 15 16 17 18 19 20
    21 22
imprimir (42)
    on left: 27, on right: 5
bucle_w (43)
    on left: 28, on right: 6
bucle_f (44)
    on left: 29, on right: 7
condicion_if (45)
    on left: 30, on right: 8
elif_clauses (46)
    on left: 31 32, on right: 30 32
else_clause (47)
    on left: 33 34, on right: 30


state 0

    0 $accept: . codigo $end

    IMPRIMIR       shift, and go to state 1
    WHILE          shift, and go to state 2
    FOR_BUCLE      shift, and go to state 3
    IF_CONDICION   shift, and go to state 4
    IDENTIFICADOR  shift, and go to state 5

    codigo        go to state 6
    sentencias    go to state 7
    sentencia     go to state 8
    asignacion    go to state 9
    imprimir      go to state 10
    bucle_w       go to state 11
    bucle_f       go to state 12
    condicion_if  go to state 13


state 1

   27 imprimir: IMPRIMIR . APERTURAPARENTESIS expresion CIERREPARENTESIS

    APERTURAPARENTESIS  shift, and go to state 14


state 2

   28 bucle_w: WHILE . APERTURAPARENTESIS expresion CIERREPARENTESIS DOSPUNTOS sentencias FIN_BUCLE

    APERTURAPARENTESIS  shift, and go to state 15


state 3

   29 bucle_f: FOR_BUCLE . IDENTIFICADOR IN RANGE APERTURAPARENTESIS expresion CIERREPARENTESIS DOSPUNTOS sentencias FIN_FOR

    IDENTIFICADOR  shift, and go to state 16


state 4

   30 condicion_if: IF_CONDICION . APERTURAPARENTESIS expresion CIERREPARENTESIS DOSPUNTOS sentencias elif_clauses else_clause FIN_CONDICION

    APERTURAPARENTESIS  shift, and go to state 17


state 5

    9 asignacion: IDENTIFICADOR . IGUAL expresion

    IGUAL  shift, and go to state 18


state 6

    0 $accept: codigo . $end

    $end  shift, and go to state 19


state 7

    1 codigo: sentencias .
    3 sentencias: sentencias . sentencia

    IMPRIMIR       shift, and go to state 1
    WHILE          shift, and go to state 2
    FOR_BUCLE      shift, and go to state 3
    IF_CONDICION   shift, and go to state 4
    IDENTIFICADOR  shift, and go to state 5

    $default  reduce using rule 1 (codigo)

    sentencia     go to state 20
    asignacion    go to state 9
    imprimir      go to state 10
    bucle_w       go to state 11
    bucle_f       go to state 12
    condicion_if  go to state 13


state 8

    2 sentencias: sentencia .

    $default  reduce using rule 2 (sentencias)


state 9

    4 sentencia: asignacion .

    $default  reduce using rule 4 (sentencia)


state 10

    5 sentencia: imprimir .

    $default  reduce using rule 5 (sentencia)


state 11

    6 sentencia: bucle_w .

    $default  reduce using rule 6 (sentencia)


state 12

    7 sentencia: bucle_f .

    $default  reduce using rule 7 (sentencia)


state 13

    8 sentencia: condicion_if .

    $default  reduce using rule 8 (sentencia)


state 14

   27 imprimir: IMPRIMIR APERTURAPARENTESIS . expresion CIERREPARENTESIS

    NUMERICO         shift, and go to state 21
    NUMERICODECIMAL  shift, and go to state 22
    IDENTIFICADOR    shift, and go to state 23
    CADENA           shift, and go to state 24

    expresion  go to state 25
    tipos      go to state 26


state 15

   28 bucle_w: WHILE APERTURAPARENTESIS . expresion CIERREPARENTESIS DOSPUNTOS sentencias FIN_BUCLE

    NUMERICO         shift, and go to state 21
    NUMERICODECIMAL  shift, and go to state 22
    IDENTIFICADOR    shift, and go to state 23
    CADENA           shift, and go to state 24

    expresion  go to state 27
    tipos      go to state 26


state 16

   29 bucle_f: FOR_BUCLE IDENTIFICADOR . IN RANGE APERTURAPARENTESIS expresion CIERREPARENTESIS DOSPUNTOS sentencias FIN_FOR

    IN  shift, and go to state 28


state 17

   30 condicion_if: IF_CONDICION APERTURAPARENTESIS . expresion CIERREPARENTESIS DOSPUNTOS sentencias elif_clauses else_clause FIN_CONDICION

    NUMERICO         shift, and go to state 21
    NUMERICODECIMAL  shift, and go to state 22
    IDENTIFICADOR    shift, and go to state 23
    CADENA           shift, and go to state 24

    expresion  go to state 29
    tipos      go to state 26


state 18

    9 asignacion: IDENTIFICADOR IGUAL . expresion

    NUMERICO         shift, and go to state 21
    NUMERICODECIMAL  shift, and go to state 22
    IDENTIFICADOR    shift, and go to state 23
    CADENA           shift, and go to state 24

    expresion  go to state 30
    tipos      go to state 26


state 19

    0 $accept: codigo $end .

    $default  accept


state 20

    3 sentencias: sentencias sentencia .

    $default  reduce using rule 3 (sentencias)


state 21

   24 tipos: NUMERICO .

    $default  reduce using rule 24 (tipos)


state 22

   25 tipos: NUMERICODECIMAL .

    $default  reduce using rule 25 (tipos)


state 23

   23 tipos: IDENTIFICADOR .

    $default  reduce using rule 23 (tipos)


state 24

   26 tipos: CADENA .

    $default  reduce using rule 26 (tipos)


state 25

   10 expresion: expresion . SUMA tipos
   11          | expresion . RESTA tipos
   12          | expresion . MULTIPLICACION tipos
   13          | expresion . DIVISION tipos
   14          | expresion . MAYOR_QUE tipos
   15          | expresion . MAYOR_IGUAL_QUE tipos
   16          | expresion . MENOR_QUE tipos
   17          | expresion . MENOR_IGUAL_QUE tipos
   18          | expresion . IGUAL_IGUAL tipos
   19          | expresion . NO_IGUAL tipos
   20          | expresion . AND tipos
   21          | expresion . OR tipos
   27 imprimir: IMPRIMIR APERTURAPARENTESIS expresion . CIERREPARENTESIS

    SUMA              shift, and go to state 31
    RESTA             shift, and go to state 32
    MULTIPLICACION    shift, and go to state 33
    DIVISION          shift, and go to state 34
    CIERREPARENTESIS  shift, and go to state 35
    MAYOR_QUE         shift, and go to state 36
    MENOR_QUE         shift, and go to state 37
    MAYOR_IGUAL_QUE   shift, and go to state 38
    MENOR_IGUAL_QUE   shift, and go to state 39
    IGUAL_IGUAL       shift, and go to state 40
    NO_IGUAL          shift, and go to state 41
    AND               shift, and go to state 42
    OR                shift, and go to state 43


state 26

   22 expresion: tipos .

    $default  reduce using rule 22 (expresion)


state 27

   10 expresion: expresion . SUMA tipos
   11          | expresion . RESTA tipos
   12          | expresion . MULTIPLICACION tipos
   13          | expresion . DIVISION tipos
   14          | expresion . MAYOR_QUE tipos
   15          | expresion . MAYOR_IGUAL_QUE tipos
   16          | expresion . MENOR_QUE tipos
   17          | expresion . MENOR_IGUAL_QUE tipos
   18          | expresion . IGUAL_IGUAL tipos
   19          | expresion . NO_IGUAL tipos
   20          | expresion . AND tipos
   21          | expresion . OR tipos
   28 bucle_w: WHILE APERTURAPARENTESIS expresion . CIERREPARENTESIS DOSPUNTOS sentencias FIN_BUCLE

    SUMA              shift, and go to state 31
    RESTA             shift, and go to state 32
    MULTIPLICACION    shift, and go to state 33
    DIVISION          shift, and go to state 34
    CIERREPARENTESIS  shift, and go to state 44
    MAYOR_QUE         shift, and go to state 36
    MENOR_QUE         shift, and go to state 37
    MAYOR_IGUAL_QUE   shift, and go to state 38
    MENOR_IGUAL_QUE   shift, and go to state 39
    IGUAL_IGUAL       shift, and go to state 40
    NO_IGUAL          shift, and go to state 41
    AND               shift, and go to state 42
    OR                shift, and go to state 43


state 28

   29 bucle_f: FOR_BUCLE IDENTIFICADOR IN . RANGE APERTURAPARENTESIS expresion CIERREPARENTESIS DOSPUNTOS sentencias FIN_FOR

    RANGE  shift, and go to state 45


state 29

   10 expresion: expresion . SUMA tipos
   11          | expresion . RESTA tipos
   12          | expresion . MULTIPLICACION tipos
   13          | expresion . DIVISION tipos
   14          | expresion . MAYOR_QUE tipos
   15          | expresion . MAYOR_IGUAL_QUE tipos
   16          | expresion . MENOR_QUE tipos
   17          | expresion . MENOR_IGUAL_QUE tipos
   18          | expresion . IGUAL_IGUAL tipos
   19          | expresion . NO_IGUAL tipos
   20          | expresion . AND tipos
   21          | expresion . OR tipos
   30 condicion_if: IF_CONDICION APERTURAPARENTESIS expresion . CIERREPARENTESIS DOSPUNTOS sentencias elif_clauses else_clause FIN_CONDICION

    SUMA              shift, and go to state 31
    RESTA             shift, and go to state 32
    MULTIPLICACION    shift, and go to state 33
    DIVISION          shift, and go to state 34
    CIERREPARENTESIS  shift, and go to state 46
    MAYOR_QUE         shift, and go to state 36
    MENOR_QUE         shift, and go to state 37
    MAYOR_IGUAL_QUE   shift, and go to state 38
    MENOR_IGUAL_QUE   shift, and go to state 39
    IGUAL_IGUAL       shift, and go to state 40
    NO_IGUAL          shift, and go to state 41
    AND               shift, and go to state 42
    OR                shift, and go to state 43


state 30

    9 asignacion: IDENTIFICADOR IGUAL expresion .
   10 expresion: expresion . SUMA tipos
   11          | expresion . RESTA tipos
   12          | expresion . MULTIPLICACION tipos
   13          | expresion . DIVISION tipos
   14          | expresion . MAYOR_QUE tipos
   15          | expresion . MAYOR_IGUAL_QUE tipos
   16          | expresion . MENOR_QUE tipos
   17          | expresion . MENOR_IGUAL_QUE tipos
   18          | expresion . IGUAL_IGUAL tipos
   19          | expresion . NO_IGUAL tipos
   20          | expresion . AND tipos
   21          | expresion . OR tipos

    SUMA             shift, and go to state 31
    RESTA            shift, and go to state 32
    MULTIPLICACION   shift, and go to state 33
    DIVISION         shift, and go to state 34
    MAYOR_QUE        shift, and go to state 36
    MENOR_QUE        shift, and go to state 37
    MAYOR_IGUAL_QUE  shift, and go to state 38
    MENOR_IGUAL_QUE  shift, and go to state 39
    IGUAL_IGUAL      shift, and go to state 40
    NO_IGUAL         shift, and go to state 41
    AND              shift, and go to state 42
    OR               shift, and go to state 43

    $default  reduce using rule 9 (asignacion)


state 31

   10 expresion: expresion SUMA . tipos

    NUMERICO         shift, and go to state 21
    NUMERICODECIMAL  shift, and go to state 22
    IDENTIFICADOR    shift, and go to state 23
    CADENA           shift, and go to state 24

    tipos  go to state 47


state 32

   11 expresion: expresion RESTA . tipos

    NUMERICO         shift, and go to state 21
    NUMERICODECIMAL  shift, and go to state 22
    IDENTIFICADOR    shift, and go to state 23
    CADENA           shift, and go to state 24

    tipos  go to state 48


state 33

   12 expresion: expresion MULTIPLICACION . tipos

    NUMERICO         shift, and go to state 21
    NUMERICODECIMAL  shift, and go to state 22
    IDENTIFICADOR    shift, and go to state 23
    CADENA           shift, and go to state 24

    tipos  go to state 49


state 34

   13 expresion: expresion DIVISION . tipos

    NUMERICO         shift, and go to state 21
    NUMERICODECIMAL  shift, and go to state 22
    IDENTIFICADOR    shift, and go to state 23
    CADENA           shift, and go to state 24

    tipos  go to state 50


state 35

   27 imprimir: IMPRIMIR APERTURAPARENTESIS expresion CIERREPARENTESIS .

    $default  reduce using rule 27 (imprimir)


state 36

   14 expresion: expresion MAYOR_QUE . tipos

    NUMERICO         shift, and go to state 21
    NUMERICODECIMAL  shift, and go to state 22
    IDENTIFICADOR    shift, and go to state 23
    CADENA           shift, and go to state 24

    tipos  go to state 51


state 37

   16 expresion: expresion MENOR_QUE . tipos

    NUMERICO         shift, and go to state 21
    NUMERICODECIMAL  shift, and go to state 22
    IDENTIFICADOR    shift, and go to state 23
    CADENA           shift, and go to state 24

    tipos  go to state 52


state 38

   15 expresion: expresion MAYOR_IGUAL_QUE . tipos

    NUMERICO         shift, and go to state 21
    NUMERICODECIMAL  shift, and go to state 22
    IDENTIFICADOR    shift, and go to state 23
    CADENA           shift, and go to state 24

    tipos  go to state 53


state 39

   17 expresion: expresion MENOR_IGUAL_QUE . tipos

    NUMERICO         shift, and go to state 21
    NUMERICODECIMAL  shift, and go to state 22
    IDENTIFICADOR    shift, and go to state 23
    CADENA           shift, and go to state 24

    tipos  go to state 54


state 40

   18 expresion: expresion IGUAL_IGUAL . tipos

    NUMERICO         shift, and go to state 21
    NUMERICODECIMAL  shift, and go to state 22
    IDENTIFICADOR    shift, and go to state 23
    CADENA           shift, and go to state 24

    tipos  go to state 55


state 41

   19 expresion: expresion NO_IGUAL . tipos

    NUMERICO         shift, and go to state 21
    NUMERICODECIMAL  shift, and go to state 22
    IDENTIFICADOR    shift, and go to state 23
    CADENA           shift, and go to state 24

    tipos  go to state 56


state 42

   20 expresion: expresion AND . tipos

    NUMERICO         shift, and go to state 21
    NUMERICODECIMAL  shift, and go to state 22
    IDENTIFICADOR    shift, and go to state 23
    CADENA           shift, and go to state 24

    tipos  go to state 57


state 43

   21 expresion: expresion OR . tipos

    NUMERICO         shift, and go to state 21
    NUMERICODECIMAL  shift, and go to state 22
    IDENTIFICADOR    shift, and go to state 23
    CADENA           shift, and go to state 24

    tipos  go to state 58


state 44

   28 bucle_w: WHILE APERTURAPARENTESIS expresion CIERREPARENTESIS . DOSPUNTOS sentencias FIN_BUCLE

    DOSPUNTOS  shift, and go to state 59


state 45

   29 bucle_f: FOR_BUCLE IDENTIFICADOR IN RANGE . APERTURAPARENTESIS expresion CIERREPARENTESIS DOSPUNTOS sentencias FIN_FOR

    APERTURAPARENTESIS  shift, and go to state 60


state 46

   30 condicion_if: IF_CONDICION APERTURAPARENTESIS expresion CIERREPARENTESIS . DOSPUNTOS sentencias elif_clauses else_clause FIN_CONDICION

    DOSPUNTOS  shift, and go to state 61


state 47

   10 expresion: expresion SUMA tipos .

    $default  reduce using rule 10 (expresion)


state 48

   11 expresion: expresion RESTA tipos .

    $default  reduce using rule 11 (expresion)


state 49

   12 expresion: expresion MULTIPLICACION tipos .

    $default  reduce using rule 12 (expresion)


state 50

   13 expresion: expresion DIVISION tipos .

    $default  reduce using rule 13 (expresion)


state 51

   14 expresion: expresion MAYOR_QUE tipos .

    $default  reduce using rule 14 (expresion)


state 52

   16 expresion: expresion MENOR_QUE tipos .

    $default  reduce using rule 16 (expresion)


state 53

   15 expresion: expresion MAYOR_IGUAL_QUE tipos .

    $default  reduce using rule 15 (expresion)


state 54

   17 expresion: expresion MENOR_IGUAL_QUE tipos .

    $default  reduce using rule 17 (expresion)


state 55

   18 expresion: expresion IGUAL_IGUAL tipos .

    $default  reduce using rule 18 (expresion)


state 56

   19 expresion: expresion NO_IGUAL tipos .

    $default  reduce using rule 19 (expresion)


state 57

   20 expresion: expresion AND tipos .

    $default  reduce using rule 20 (expresion)


state 58

   21 expresion: expresion OR tipos .

    $default  reduce using rule 21 (expresion)


state 59

   28 bucle_w: WHILE APERTURAPARENTESIS expresion CIERREPARENTESIS DOSPUNTOS . sentencias FIN_BUCLE

    IMPRIMIR       shift, and go to state 1
    WHILE          shift, and go to state 2
    FOR_BUCLE      shift, and go to state 3
    IF_CONDICION   shift, and go to state 4
    IDENTIFICADOR  shift, and go to state 5

    sentencias    go to state 62
    sentencia     go to state 8
    asignacion    go to state 9
    imprimir      go to state 10
    bucle_w       go to state 11
    bucle_f       go to state 12
    condicion_if  go to state 13


state 60

   29 bucle_f: FOR_BUCLE IDENTIFICADOR IN RANGE APERTURAPARENTESIS . expresion CIERREPARENTESIS DOSPUNTOS sentencias FIN_FOR

    NUMERICO         shift, and go to state 21
    NUMERICODECIMAL  shift, and go to state 22
    IDENTIFICADOR    shift, and go to state 23
    CADENA           shift, and go to state 24

    expresion  go to state 63
    tipos      go to state 26


state 61

   30 condicion_if: IF_CONDICION APERTURAPARENTESIS expresion CIERREPARENTESIS DOSPUNTOS . sentencias elif_clauses else_clause FIN_CONDICION

    IMPRIMIR       shift, and go to state 1
    WHILE          shift, and go to state 2
    FOR_BUCLE      shift, and go to state 3
    IF_CONDICION   shift, and go to state 4
    IDENTIFICADOR  shift, and go to state 5

    sentencias    go to state 64
    sentencia     go to state 8
    asignacion    go to state 9
    imprimir      go to state 10
    bucle_w       go to state 11
    bucle_f       go to state 12
    condicion_if  go to state 13


state 62

    3 sentencias: sentencias . sentencia
   28 bucle_w: WHILE APERTURAPARENTESIS expresion CIERREPARENTESIS DOSPUNTOS sentencias . FIN_BUCLE

    IMPRIMIR       shift, and go to state 1
    WHILE          shift, and go to state 2
    FIN_BUCLE      shift, and go to state 65
    FOR_BUCLE      shift, and go to state 3
    IF_CONDICION   shift, and go to state 4
    IDENTIFICADOR  shift, and go to state 5

    sentencia     go to state 20
    asignacion    go to state 9
    imprimir      go to state 10
    bucle_w       go to state 11
    bucle_f       go to state 12
    condicion_if  go to state 13


state 63

   10 expresion: expresion . SUMA tipos
   11          | expresion . RESTA tipos
   12          | expresion . MULTIPLICACION tipos
   13          | expresion . DIVISION tipos
   14          | expresion . MAYOR_QUE tipos
   15          | expresion . MAYOR_IGUAL_QUE tipos
   16          | expresion . MENOR_QUE tipos
   17          | expresion . MENOR_IGUAL_QUE tipos
   18          | expresion . IGUAL_IGUAL tipos
   19          | expresion . NO_IGUAL tipos
   20          | expresion . AND tipos
   21          | expresion . OR tipos
   29 bucle_f: FOR_BUCLE IDENTIFICADOR IN RANGE APERTURAPARENTESIS expresion . CIERREPARENTESIS DOSPUNTOS sentencias FIN_FOR

    SUMA              shift, and go to state 31
    RESTA             shift, and go to state 32
    MULTIPLICACION    shift, and go to state 33
    DIVISION          shift, and go to state 34
    CIERREPARENTESIS  shift, and go to state 66
    MAYOR_QUE         shift, and go to state 36
    MENOR_QUE         shift, and go to state 37
    MAYOR_IGUAL_QUE   shift, and go to state 38
    MENOR_IGUAL_QUE   shift, and go to state 39
    IGUAL_IGUAL       shift, and go to state 40
    NO_IGUAL          shift, and go to state 41
    AND               shift, and go to state 42
    OR                shift, and go to state 43


state 64

    3 sentencias: sentencias . sentencia
   30 condicion_if: IF_CONDICION APERTURAPARENTESIS expresion CIERREPARENTESIS DOSPUNTOS sentencias . elif_clauses else_clause FIN_CONDICION

    IMPRIMIR       shift, and go to state 1
    WHILE          shift, and go to state 2
    FOR_BUCLE      shift, and go to state 3
    IF_CONDICION   shift, and go to state 4
    IDENTIFICADOR  shift, and go to state 5

    $default  reduce using rule 31 (elif_clauses)

    sentencia     go to state 20
    asignacion    go to state 9
    imprimir      go to state 10
    bucle_w       go to state 11
    bucle_f       go to state 12
    condicion_if  go to state 13
    elif_clauses  go to state 67


state 65

   28 bucle_w: WHILE APERTURAPARENTESIS expresion CIERREPARENTESIS DOSPUNTOS sentencias FIN_BUCLE .

    $default  reduce using rule 28 (bucle_w)


state 66

   29 bucle_f: FOR_BUCLE IDENTIFICADOR IN RANGE APERTURAPARENTESIS expresion CIERREPARENTESIS . DOSPUNTOS sentencias FIN_FOR

    DOSPUNTOS  shift, and go to state 68


state 67

   30 condicion_if: IF_CONDICION APERTURAPARENTESIS expresion CIERREPARENTESIS DOSPUNTOS sentencias elif_clauses . else_clause FIN_CONDICION
   32 elif_clauses: elif_clauses . ELIF_CONDICION APERTURAPARENTESIS expresion CIERREPARENTESIS DOSPUNTOS sentencias

    ELIF_CONDICION  shift, and go to state 69
    ELSE_CONDICION  shift, and go to state 70

    $default  reduce using rule 34 (else_clause)

    else_clause  go to state 71


state 68

   29 bucle_f: FOR_BUCLE IDENTIFICADOR IN RANGE APERTURAPARENTESIS expresion CIERREPARENTESIS DOSPUNTOS . sentencias FIN_FOR

    IMPRIMIR       shift, and go to state 1
    WHILE          shift, and go to state 2
    FOR_BUCLE      shift, and go to state 3
    IF_CONDICION   shift, and go to state 4
    IDENTIFICADOR  shift, and go to state 5

    sentencias    go to state 72
    sentencia     go to state 8
    asignacion    go to state 9
    imprimir      go to state 10
    bucle_w       go to state 11
    bucle_f       go to state 12
    condicion_if  go to state 13


state 69

   32 elif_clauses: elif_clauses ELIF_CONDICION . APERTURAPARENTESIS expresion CIERREPARENTESIS DOSPUNTOS sentencias

    APERTURAPARENTESIS  shift, and go to state 73


state 70

   33 else_clause: ELSE_CONDICION . DOSPUNTOS sentencias

    DOSPUNTOS  shift, and go to state 74


state 71

   30 condicion_if: IF_CONDICION APERTURAPARENTESIS expresion CIERREPARENTESIS DOSPUNTOS sentencias elif_clauses else_clause . FIN_CONDICION

    FIN_CONDICION  shift, and go to state 75


state 72

    3 sentencias: sentencias . sentencia
   29 bucle_f: FOR_BUCLE IDENTIFICADOR IN RANGE APERTURAPARENTESIS expresion CIERREPARENTESIS DOSPUNTOS sentencias . FIN_FOR

    IMPRIMIR       shift, and go to state 1
    WHILE          shift, and go to state 2
    FOR_BUCLE      shift, and go to state 3
    FIN_FOR        shift, and go to state 76
    IF_CONDICION   shift, and go to state 4
    IDENTIFICADOR  shift, and go to state 5

    sentencia     go to state 20
    asignacion    go to state 9
    imprimir      go to state 10
    bucle_w       go to state 11
    bucle_f       go to state 12
    condicion_if  go to state 13


state 73

   32 elif_clauses: elif_clauses ELIF_CONDICION APERTURAPARENTESIS . expresion CIERREPARENTESIS DOSPUNTOS sentencias

    NUMERICO         shift, and go to state 21
    NUMERICODECIMAL  shift, and go to state 22
    IDENTIFICADOR    shift, and go to state 23
    CADENA           shift, and go to state 24

    expresion  go to state 77
    tipos      go to state 26


state 74

   33 else_clause: ELSE_CONDICION DOSPUNTOS . sentencias

    IMPRIMIR       shift, and go to state 1
    WHILE          shift, and go to state 2
    FOR_BUCLE      shift, and go to state 3
    IF_CONDICION   shift, and go to state 4
    IDENTIFICADOR  shift, and go to state 5

    sentencias    go to state 78
    sentencia     go to state 8
    asignacion    go to state 9
    imprimir      go to state 10
    bucle_w       go to state 11
    bucle_f       go to state 12
    condicion_if  go to state 13


state 75

   30 condicion_if: IF_CONDICION APERTURAPARENTESIS expresion CIERREPARENTESIS DOSPUNTOS sentencias elif_clauses else_clause FIN_CONDICION .

    $default  reduce using rule 30 (condicion_if)


state 76

   29 bucle_f: FOR_BUCLE IDENTIFICADOR IN RANGE APERTURAPARENTESIS expresion CIERREPARENTESIS DOSPUNTOS sentencias FIN_FOR .

    $default  reduce using rule 29 (bucle_f)


state 77

   10 expresion: expresion . SUMA tipos
   11          | expresion . RESTA tipos
   12          | expresion . MULTIPLICACION tipos
   13          | expresion . DIVISION tipos
   14          | expresion . MAYOR_QUE tipos
   15          | expresion . MAYOR_IGUAL_QUE tipos
   16          | expresion . MENOR_QUE tipos
   17          | expresion . MENOR_IGUAL_QUE tipos
   18          | expresion . IGUAL_IGUAL tipos
   19          | expresion . NO_IGUAL tipos
   20          | expresion . AND tipos
   21          | expresion . OR tipos
   32 elif_clauses: elif_clauses ELIF_CONDICION APERTURAPARENTESIS expresion . CIERREPARENTESIS DOSPUNTOS sentencias

    SUMA              shift, and go to state 31
    RESTA             shift, and go to state 32
    MULTIPLICACION    shift, and go to state 33
    DIVISION          shift, and go to state 34
    CIERREPARENTESIS  shift, and go to state 79
    MAYOR_QUE         shift, and go to state 36
    MENOR_QUE         shift, and go to state 37
    MAYOR_IGUAL_QUE   shift, and go to state 38
    MENOR_IGUAL_QUE   shift, and go to state 39
    IGUAL_IGUAL       shift, and go to state 40
    NO_IGUAL          shift, and go to state 41
    AND               shift, and go to state 42
    OR                shift, and go to state 43


state 78

    3 sentencias: sentencias . sentencia
   33 else_clause: ELSE_CONDICION DOSPUNTOS sentencias .

    IMPRIMIR       shift, and go to state 1
    WHILE          shift, and go to state 2
    FOR_BUCLE      shift, and go to state 3
    IF_CONDICION   shift, and go to state 4
    IDENTIFICADOR  shift, and go to state 5

    $default  reduce using rule 33 (else_clause)

    sentencia     go to state 20
    asignacion    go to state 9
    imprimir      go to state 10
    bucle_w       go to state 11
    bucle_f       go to state 12
    condicion_if  go to state 13


state 79

   32 elif_clauses: elif_clauses ELIF_CONDICION APERTURAPARENTESIS expresion CIERREPARENTESIS . DOSPUNTOS sentencias

    DOSPUNTOS  shift, and go to state 80


state 80

   32 elif_clauses: elif_clauses ELIF_CONDICION APERTURAPARENTESIS expresion CIERREPARENTESIS DOSPUNTOS . sentencias

    IMPRIMIR       shift, and go to state 1
    WHILE          shift, and go to state 2
    FOR_BUCLE      shift, and go to state 3
    IF_CONDICION   shift, and go to state 4
    IDENTIFICADOR  shift, and go to state 5

    sentencias    go to state 81
    sentencia     go to state 8
    asignacion    go to state 9
    imprimir      go to state 10
    bucle_w       go to state 11
    bucle_f       go to state 12
    condicion_if  go to state 13


state 81

    3 sentencias: sentencias . sentencia
   32 elif_clauses: elif_clauses ELIF_CONDICION APERTURAPARENTESIS expresion CIERREPARENTESIS DOSPUNTOS sentencias .

    IMPRIMIR       shift, and go to state 1
    WHILE          shift, and go to state 2
    FOR_BUCLE      shift, and go to state 3
    IF_CONDICION   shift, and go to state 4
    IDENTIFICADOR  shift, and go to state 5

    $default  reduce using rule 32 (elif_clauses)

    sentencia     go to state 20
    asignacion    go to state 9
    imprimir      go to state 10
    bucle_w       go to state 11
    bucle_f       go to state 12
    condicion_if  go to state 13
